AT-30 Fixed Double Scroll

--- a/client/src/features/workout/workout-builder/workout-builder.component.scss
+++ b/client/src/features/workout/workout-builder/workout-builder.component.scss
@@ -52,7 +52,6 @@
 
         @include mixins.respond(Phone) {
           width: 100%;
-          max-height: 70vh; //Scroll
           overflow-y: auto;
           -ms-overflow-style: none; /* Internet Explorer 10+ */
           scrollbar-width: none; /* Firefox */
